typescript/checker/tests/conformance/es6/for-ofStatements/for-of7.ts.stderr
error: UndefinedSymbol {
    sym: Atom('v' type=inline),
    span: Span {
        lo: BytePos(
            16,
        ),
        hi: BytePos(
            17,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/for-ofStatements/for-of7.ts:2:1
  |
2 | v;
  | ^

